--- a/index.html
+++ b/index.html
@@ -3,44 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image"              content="http://fieldscapes.ru/see-the-sound/lgoo-black.svg" />
   <title>see the sound</title>
-  <link rel="stylesheet" href="style.css?v=1.0.0">
+  <link rel="stylesheet" href="style.css?v=2.0.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Dosis:200,300" rel="stylesheet">
 </head>
 <body>
 <div class="wrap">
 <div class="logo">
-    <svg  xmlns="http://www.w3.org/2000/svg" width="200" height="54" viewBox="0 0 277.29 74.364">
-      <defs>
-        <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="100%">
-          <stop offset="0%"   stop-color="#0DFF00"/>
-          <stop offset="50%" stop-color="#ffff00"/>
-          <stop offset="100%" stop-color="#ff0000"/>
-        </linearGradient>
-      </defs>
-
-
-<path class="sound" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M127.664,30.472
-    c2.994-3.257-2.916-5.99-6.625-3.748c-9.165,5.54,3.068,12.65,2.81,19.626c-0.236,6.368-10.388,4.898-10.218,0.871
-    c0.259-6.149,19.833-1.747,20.222-10.945c-2.77,1.889-3.593,12.08,0.895,13.421c3.082-4.407,4.831-10.122,4.464-15.483
-    c-0.242-3.5-0.715-7.607-4.355-3.375c-6.241,7.254,10.889,3.461,13.432-0.791c-2.328,2.006-4.634,13.242-0.428,15.398
-    c4.482,2.3,7.398-12.452,7.139-15.359c-1.909,2.59-3.527,12.33,1.386,13.292c5.044,0.987,6.75-10.626,6.765-13.87
-    c-1.916,4.318-2.023,10.462-1.729,15.416c3.54-4.822,5.918-12.068,8.582-17.667c0.459,3.31-2.479,16.021,2,16.038
-    c4.215,0.018,6.172-12.049,12.748-11.86c-4.957-1.041-10.002,9.63-7.592,13.4c5.305,8.302,19.849-28.655,20.658-31.695
-    c0.702-2.636,4.133-12.187-0.758-12.592c-4.203-0.349-8.766,15.869-9.355,18.534c-1.188,5.355-3.16,33.063,9.202,30.142"/>
-<path class="t" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M64.671,7.793
-    c-0.388,8.22-1.896,16.521-2.642,24.74c-0.415,4.566-2.328,13.379,2.279,16.738c4.592,3.35,7.979-1.561,8.129-5.921"/>
-<path class="he" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M53.582,35.621
-    c7.985-3.098,17.671-12.337,23.328-19.833c0.443,2.725,0.139,10.546-0.331,18.485c-0.469,7.938-1.104,15.993-1.324,19.184
-    c0.658-4.834,3.613-17.6,9.131-18.992c0.024,2.684-2.117,10.487,0.875,11.901c5.813,2.749,10.539-11.928,10.319-15.782
-    c-5.345,0.129-6.675,11.938-4.528,15.552c3.788,6.382,9.447-0.116,13.179-3.046"/>
-<path class="s" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M10.252,30.41
-    c3.854-3.42-3.666-6.669-6.213-1.553c-3.083,6.189,4.361,13.567,3.629,19.705c-3.816,0.764-8.496-1.55-7.543-5.999"/>
-<path class="ee" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M14.049,43.575
-    c1.838-1.768,12.2-10.837,10.175-15.198c-1.486-3.2-4.489-0.463-6.261,1.732c-2.821,3.494-3.711,11.438-2.093,15.548
-    c5.416,13.754,25.048-12.887,22.047-17.624c-3.749-5.916-8.143,9.23-7.591,12.066c1.479,7.616,18.45,10.08,19.672,2.97"/>
+<svg xmlns="http://www.w3.org/2000/svg" width="175.859" height="47.344" viewBox="14.904 4.22 175.859 47.344" enable-background="new 14.904 4.22 175.859 47.344">
+<path class="sound" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M127.221,30.934
+    c2.623-2.853-2.554-5.247-5.802-3.284c-8.028,4.852,2.687,11.081,2.461,17.19c-0.206,5.577-9.099,4.291-8.949,0.764
+    c0.227-5.387,17.371-1.531,17.712-9.586c-2.427,1.652-3.146,10.58,0.783,11.754c2.699-3.859,4.232-8.865,3.91-13.561
+    c-0.212-3.066-0.625-6.663-3.814-2.955c-5.467,6.354,9.537,3.03,11.764-0.694c-2.037,1.758-4.058,11.599-0.374,13.487
+    c3.926,2.014,6.479-10.906,6.253-13.453c-1.672,2.269-3.09,10.799,1.215,11.641c4.416,0.865,5.911-9.306,5.925-12.147
+    c-1.679,3.783-1.772,9.163-1.516,13.502c3.101-4.222,5.184-10.569,7.518-15.473c0.402,2.899-2.171,14.032,1.752,14.047
+    c3.69,0.017,5.404-10.553,11.165-10.387c-4.342-0.912-8.76,8.435-6.649,11.735c4.646,7.271,17.386-25.097,18.094-27.76
+    c0.614-2.309,3.619-10.674-0.664-11.029c-3.682-0.306-7.679,13.899-8.194,16.233c-1.041,4.69-2.767,28.959,8.061,26.401"/>
+<path class="t"  fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M72.048,11.07
+    c-0.34,7.199-1.661,14.47-2.314,21.668c-0.363,4-2.04,11.719,1.996,14.662c4.022,2.932,6.989-1.367,7.121-5.188"/>
+<path class="he" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M62.335,35.443
+    c6.994-2.713,15.478-10.805,20.433-17.371c0.388,2.387,0.121,9.237-0.291,16.189c-0.411,6.953-0.967,14.009-1.159,16.803
+    c0.577-4.233,3.164-15.414,7.998-16.633c0.021,2.35-1.854,9.184,0.766,10.424c5.091,2.407,9.23-10.448,9.039-13.824
+    c-4.682,0.113-5.847,10.457-3.966,13.621c3.318,5.592,8.274-0.102,11.543-2.666"/>
+<path class="s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M24.384,30.879
+    c3.375-2.995-3.211-5.841-5.442-1.359c-2.701,5.42,3.819,11.883,3.179,17.26c-3.343,0.668-7.441-1.359-6.607-5.254"/>
+<path class="ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M27.71,42.41
+    c1.609-1.548,10.686-9.492,8.911-13.312c-1.302-2.802-3.932-0.405-5.483,1.517c-2.471,3.062-3.25,10.019-1.833,13.619
+    c4.744,12.046,21.938-11.287,19.31-15.437c-3.284-5.182-7.131,8.084-6.648,10.569c1.295,6.671,16.161,8.828,17.23,2.601"/>
 </svg>
+
+
 </div>
 
 <div class="intro">
