--- a/index.html
+++ b/index.html
@@ -11,36 +11,40 @@
 </head>
 <body>
 <div class="wrap">
-<div class="logo">
-<svg xmlns="http://www.w3.org/2000/svg" width="175.859" height="47.344" viewBox="14.904 4.22 175.859 47.344" enable-background="new 14.904 4.22 175.859 47.344">
-<path class="sound" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M127.221,30.934
-    c2.623-2.853-2.554-5.247-5.802-3.284c-8.028,4.852,2.687,11.081,2.461,17.19c-0.206,5.577-9.099,4.291-8.949,0.764
-    c0.227-5.387,17.371-1.531,17.712-9.586c-2.427,1.652-3.146,10.58,0.783,11.754c2.699-3.859,4.232-8.865,3.91-13.561
-    c-0.212-3.066-0.625-6.663-3.814-2.955c-5.467,6.354,9.537,3.03,11.764-0.694c-2.037,1.758-4.058,11.599-0.374,13.487
-    c3.926,2.014,6.479-10.906,6.253-13.453c-1.672,2.269-3.09,10.799,1.215,11.641c4.416,0.865,5.911-9.306,5.925-12.147
-    c-1.679,3.783-1.772,9.163-1.516,13.502c3.101-4.222,5.184-10.569,7.518-15.473c0.402,2.899-2.171,14.032,1.752,14.047
-    c3.69,0.017,5.404-10.553,11.165-10.387c-4.342-0.912-8.76,8.435-6.649,11.735c4.646,7.271,17.386-25.097,18.094-27.76
-    c0.614-2.309,3.619-10.674-0.664-11.029c-3.682-0.306-7.679,13.899-8.194,16.233c-1.041,4.69-2.767,28.959,8.061,26.401"/>
-<path class="t"  fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M72.048,11.07
-    c-0.34,7.199-1.661,14.47-2.314,21.668c-0.363,4-2.04,11.719,1.996,14.662c4.022,2.932,6.989-1.367,7.121-5.188"/>
-<path class="he" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M62.335,35.443
-    c6.994-2.713,15.478-10.805,20.433-17.371c0.388,2.387,0.121,9.237-0.291,16.189c-0.411,6.953-0.967,14.009-1.159,16.803
-    c0.577-4.233,3.164-15.414,7.998-16.633c0.021,2.35-1.854,9.184,0.766,10.424c5.091,2.407,9.23-10.448,9.039-13.824
-    c-4.682,0.113-5.847,10.457-3.966,13.621c3.318,5.592,8.274-0.102,11.543-2.666"/>
-<path class="s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M24.384,30.879
-    c3.375-2.995-3.211-5.841-5.442-1.359c-2.701,5.42,3.819,11.883,3.179,17.26c-3.343,0.668-7.441-1.359-6.607-5.254"/>
-<path class="ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M27.71,42.41
-    c1.609-1.548,10.686-9.492,8.911-13.312c-1.302-2.802-3.932-0.405-5.483,1.517c-2.471,3.062-3.25,10.019-1.833,13.619
-    c4.744,12.046,21.938-11.287,19.31-15.437c-3.284-5.182-7.131,8.084-6.648,10.569c1.295,6.671,16.161,8.828,17.23,2.601"/>
+<div class="hello">
+<svg class="see-the" xmlns="http://www.w3.org/2000/svg" width="92.3" height="41" viewBox="0 0 92.3 41" enable-background="new 0 0 92.3 41" >
+<path class="t"  fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M57.1,0.5c-0.3,7.2-1.7,14.5-2.3,21.7c-0.4,4-2,11.7,2,14.7c4,2.9,7-1.4,7.1-5.2"/>
+<path class="he" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M47.4,24.9c7-2.7,15.5-10.8,20.4-17.4c0.4,2.4,0.1,9.2-0.3,16.2c-0.4,7-1,14-1.2,16.8c0.6-4.2,3.2-15.4,8-16.6
+  c0,2.3-1.9,9.2,0.8,10.4c5.1,2.4,9.2-10.4,9-13.8c-4.7,0.1-5.8,10.5-4,13.6c3.3,5.6,8.3-0.1,11.5-2.7"/>
+<path class="s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M9.5,20.3c3.4-3-3.2-5.8-5.4-1.4c-2.7,5.4,3.8,11.9,3.2,17.3c-3.3,0.7-7.4-1.4-6.6-5.3"/>
+<path class="ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,31.8c1.6-1.5,10.7-9.5,8.9-13.3c-1.3-2.8-3.9-0.4-5.5,1.5c-2.5,3.1-3.2,10-1.8,13.6
+  c4.7,12,21.9-11.3,19.3-15.4c-3.3-5.2-7.1,8.1-6.6,10.6c1.3,6.7,16.2,8.8,17.2,2.6"/>
 </svg>
 
+<ul class="list">
+  <li class="item">
+    <button class="list-button" data-type="sound"><svg xmlns="http://www.w3.org/2000/svg" width="76.3" height="44.9" viewBox="0 0 76.3 44.9" enable-background="new 0 0 76.3 44.9">
+    <path class="sound" class="s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,26.7c2.6-2.9-2.6-5.2-5.8-3.3c-8,4.9,2.7,11.1,2.5,17.2c-0.2,5.6-9.1,4.3-8.9,0.8
+      c0.2-5.4,17.4-1.5,17.7-9.6c-2.4,1.7-3.1,10.6,0.8,11.8c2.7-3.9,4.2-8.9,3.9-13.6c-0.2-3.1-0.6-6.7-3.8-3c-5.5,6.4,9.5,3,11.8-0.7
+      c-2,1.8-4.1,11.6-0.4,13.5c3.9,2,6.5-10.9,6.3-13.5C35.1,28.6,33.6,37.2,38,38c4.4,0.9,5.9-9.3,5.9-12.1c-1.7,3.8-1.8,9.2-1.5,13.5
+      c3.1-4.2,5.2-10.6,7.5-15.5c0.4,2.9-2.2,14,1.8,14c3.7,0,5.4-10.6,11.2-10.4c-4.3-0.9-8.8,8.4-6.6,11.7c4.6,7.3,17.4-25.1,18.1-27.8
+      c0.6-2.3,3.6-10.7-0.7-11c-3.7-0.3-7.7,13.9-8.2,16.2c-1,4.7-2.8,29,8.1,26.4"/>
+    </svg>
+    </button>
+
+  </li>
+  <li class="item">
+    <button class="voice list-button" data-type="sound">voice</button>
+  </li>
+</ul>
 
 </div>
+
 
 <div class="intro">
     
 
-    <div class="form">
+    <div class="mp3">
         <input accept=".mp3" type="file" id="file" name="file" class="file">
         <label for="file" class="text">upload an mp3</label>
         <label for="file" class="text text--bottom">and let the magic begin</label>
