--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
 <div class="intro">
     
-
-    <div class="mp3">
+<div class="mp3">
+  
+    <div class="upload">
         <input accept=".mp3" type="file" id="file" name="file" class="file">
         <label for="file" class="text">upload an mp3</label>
         <label for="file" class="text text--bottom">and let the magic begin</label>
@@ -53,10 +54,17 @@
         </label>
     </div>
 
-
     <button class="play">
         play
     </button>
+</div>
+
+<div class="record">
+  <button class="rec">
+      rec
+  </button>
+</div>
+
 </div>
 
 <div class="equalizer">
