--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
 <div class="wrap">
-<div class="hello">
-<svg class="see-the" xmlns="http://www.w3.org/2000/svg" width="92.3" height="41" viewBox="0 0 92.3 41" enable-background="new 0 0 92.3 41" >
-<path class="see-the__s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M9.5,20.3c3.4-3-3.2-5.8-5.4-1.4c-2.7,5.4,3.8,11.9,3.2,17.3c-3.3,0.7-7.4-1.4-6.6-5.3"/>
-<path class="see-the__ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,31.8c1.6-1.5,10.7-9.5,8.9-13.3c-1.3-2.8-3.9-0.4-5.5,1.5c-2.5,3.1-3.2,10-1.8,13.6
-  c4.7,12,21.9-11.3,19.3-15.4c-3.3-5.2-7.1,8.1-6.6,10.6c1.3,6.7,16.2,8.8,17.2,2.6"/>
-<path class="see-the__t"  fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M57.1,0.5c-0.3,7.2-1.7,14.5-2.3,21.7c-0.4,4-2,11.7,2,14.7c4,2.9,7-1.4,7.1-5.2"/>
-<path class="see-the__he" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M47.4,24.9c7-2.7,15.5-10.8,20.4-17.4c0.4,2.4,0.1,9.2-0.3,16.2c-0.4,7-1,14-1.2,16.8c0.6-4.2,3.2-15.4,8-16.6
-  c0,2.3-1.9,9.2,0.8,10.4c5.1,2.4,9.2-10.4,9-13.8c-4.7,0.1-5.8,10.5-4,13.6c3.3,5.6,8.3-0.1,11.5-2.7"/>
-</svg>
+  <div class="hello">
+  <svg class="see-the" xmlns="http://www.w3.org/2000/svg" width="92.3" height="41" viewBox="0 0 92.3 41" enable-background="new 0 0 92.3 41" >
+  <path class="see-the__s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M9.5,20.3c3.4-3-3.2-5.8-5.4-1.4c-2.7,5.4,3.8,11.9,3.2,17.3c-3.3,0.7-7.4-1.4-6.6-5.3"/>
+  <path class="see-the__ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,31.8c1.6-1.5,10.7-9.5,8.9-13.3c-1.3-2.8-3.9-0.4-5.5,1.5c-2.5,3.1-3.2,10-1.8,13.6
+    c4.7,12,21.9-11.3,19.3-15.4c-3.3-5.2-7.1,8.1-6.6,10.6c1.3,6.7,16.2,8.8,17.2,2.6"/>
+  <path class="see-the__t"  fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M57.1,0.5c-0.3,7.2-1.7,14.5-2.3,21.7c-0.4,4-2,11.7,2,14.7c4,2.9,7-1.4,7.1-5.2"/>
+  <path class="see-the__he" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M47.4,24.9c7-2.7,15.5-10.8,20.4-17.4c0.4,2.4,0.1,9.2-0.3,16.2c-0.4,7-1,14-1.2,16.8c0.6-4.2,3.2-15.4,8-16.6
+    c0,2.3-1.9,9.2,0.8,10.4c5.1,2.4,9.2-10.4,9-13.8c-4.7,0.1-5.8,10.5-4,13.6c3.3,5.6,8.3-0.1,11.5-2.7"/>
+  </svg>
 
 <ul class="list">
   <li class="item" data-type="sound">
@@ -54,29 +54,25 @@
 
 <div class="intro">
     
-<div class="mp3">
-  
-    <div class="upload">
-        <input accept=".mp3" type="file" id="file" name="file" class="file">
-        <label for="file" class="text">upload an mp3</label>
-        <label for="file" class="text text--bottom">and let the magic begin</label>
-        <label class="file-open" for="file">
-            <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="224.031 220.877 63 63" enable-background="new 224.031 220.877 63 63"><path stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="none" d="M255.557 238.266v28.629M241.25 252.573h28.505"/><circle stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" cx="255.531" cy="252.377" r="30" fill="none"/></svg>
-        </label>
-    </div>
+  <div class="mp3">
+    
+      <div class="upload">
+          <input accept=".mp3" type="file" id="file" name="file" class="file">
+          <label for="file" class="text">upload an mp3</label>
+          <label for="file" class="text text--bottom">and let the magic begin</label>
+          <label class="file-open" for="file">
+              <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="224.031 220.877 63 63" enable-background="new 224.031 220.877 63 63"><path stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="none" d="M255.557 238.266v28.629M241.25 252.573h28.505"/><circle stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" cx="255.531" cy="252.377" r="30" fill="none"/></svg>
+          </label>
+      </div>
 
-    <button class="play">
-        play
-    </button>
-</div>
+      <button class="play">
+          play
+      </button>
+  </div>
 
-<div class="record">
-  <button class="rec">
-      click here <br>
-      and say something
-  </button>
-</div>
-
+  <div class="record">
+    talk, sing, dance, or turn on the music
+  </div>
 </div>
 
 <div class="equalizer">
