--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="wrap">
   <div class="hello">
-  <svg class="see-the" xmlns="http://www.w3.org/2000/svg" width="92.3" height="41" viewBox="0 0 92.3 41" enable-background="new 0 0 92.3 41" >
+  <svg class="see-the animated" xmlns="http://www.w3.org/2000/svg" width="92.3" height="41" viewBox="0 0 92.3 41" enable-background="new 0 0 92.3 41" >
   <path class="see-the__s" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M9.5,20.3c3.4-3-3.2-5.8-5.4-1.4c-2.7,5.4,3.8,11.9,3.2,17.3c-3.3,0.7-7.4-1.4-6.6-5.3"/>
   <path class="see-the__ee" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,31.8c1.6-1.5,10.7-9.5,8.9-13.3c-1.3-2.8-3.9-0.4-5.5,1.5c-2.5,3.1-3.2,10-1.8,13.6
     c4.7,12,21.9-11.3,19.3-15.4c-3.3-5.2-7.1,8.1-6.6,10.6c1.3,6.7,16.2,8.8,17.2,2.6"/>
@@ -22,7 +22,7 @@
   </svg>
 
 <ul class="list">
-  <li class="item" data-type="sound">
+  <li class="item item--sound disabled" data-type="sound">
     <svg xmlns="http://www.w3.org/2000/svg" width="76.3" height="44.9" viewBox="0 0 76.3 44.9" enable-background="new 0 0 76.3 44.9">
     <path class="sound" fill="none" stroke="#53ff4a" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12.8,26.7c2.6-2.9-2.6-5.2-5.8-3.3c-8,4.9,2.7,11.1,2.5,17.2c-0.2,5.6-9.1,4.3-8.9,0.8
       c0.2-5.4,17.4-1.5,17.7-9.6c-2.4,1.7-3.1,10.6,0.8,11.8c2.7-3.9,4.2-8.9,3.9-13.6c-0.2-3.1-0.6-6.7-3.8-3c-5.5,6.4,9.5,3,11.8-0.7
@@ -31,9 +31,15 @@
       c0.6-2.3,3.6-10.7-0.7-11c-3.7-0.3-7.7,13.9-8.2,16.2c-1,4.7-2.8,29,8.1,26.4"/>
     </svg>
 
+    <svg class="sound_under" xmlns="http://www.w3.org/2000/svg" width="70.488" height="9.501" viewBox="1.106 49.236 70.488 9.501" enable-background="new 1.106 49.236 70.488 9.501"><path stroke="#53FF4A" stroke-miterlimit="10" d="M1.316 58.284c8.725-4.053 19.501-5.243 28.995-5.765 8.863-.487 18.175-2.493 27.033-2.234 3.686.107 11.225-1.496 13.973.332" fill="none"/></svg>
+
   </li>
-  <li class="item voice" data-type="voice">
-    <svg xmlns="http://www.w3.org/2000/svg" width="62.2px" height="27.751px" viewBox="132.132 22.999 62.2 27.751" enable-background="new 132.132 22.999 62.2 27.751">
+  <li class="slash item">
+    <svg xmlns="http://www.w3.org/2000/svg" width="25.5" height="32.5" viewBox="36.65 3.5 25.5 32.5" enable-background="new 36.65 3.5 25.5 32.5"><path stroke="#53FF4A" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M37.15 35.5c2.542-6.293 8.343-12.063 12.487-17.227 3.236-4.031 6.592-7.953 9.88-11.94.736-.893 1.259-1.896 2.133-2.333" fill="none"/></svg>
+  </li>
+
+  <li class="item voice disabled" data-type="voice">
+    <svg  xmlns="http://www.w3.org/2000/svg" width="62.2px" height="27.751px" viewBox="132.132 22.999 62.2 27.751" enable-background="new 132.132 22.999 62.2 27.751">
       <path class="voice__v" fill="none" stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M135.498,31.166
         c0.48,0.508-1.848,9.425-2.264,12.035c-0.329,2.067-1.605,6.369,0.998,6.983c4.867,1.147,7.553-13.102,7.209-15.997
         c-2.998,3.024,7.176,0.688,8.708-1.681"/>
@@ -46,6 +52,8 @@
         c0.597-0.498,0.992-0.808,0.617-1.949c-5.054,0.025-9.532,10.867-7.307,14.994c3.033,5.627,14.069-4.209,16.02-7.319
         c0.812-1.295,2.395-4.411,0.681-5.414c-3.663-2.145-6.621,7.314-6.71,9.294c-0.401,8.981,12.684,9.13,16.033,2.394"/>
     </svg>
+
+    <svg class="voice_under" xmlns="http://www.w3.org/2000/svg" width="66.5" height="3.967" viewBox="3.1 27.875 66.5 3.967" enable-background="new 3.1 27.875 66.5 3.967"><path stroke="#86FF40" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M3.6 31.042c2.352.74 5.578-.114 8.012-.177 4.279-.108 8.549-.158 12.83-.155 5.686.003 11.336.04 17.007-.413 6.739-.539 13.509-.866 20.263-1.209 2.077-.105 5.732-.211 7.388-.713" fill="none"/></svg>
   </li>
 </ul>
 
@@ -83,10 +91,6 @@
 
 </div>
 
-<!-- <audio id="audioElement" src="../kooks.mp3"></audio> -->
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"
-  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-  crossorigin="anonymous"></script>
 
 <script src="script.js"></script>
 </body>
